[package]
name = "jupiter-swap-io-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
spl-memo = "=4.0.0"
solana-sdk = "=1.16.25"
swap-io-clmm-rust-sdk = {git = "https://github.com/swap-dot-io/swap-io-clmm-rust-sdk"}
jupiter-amm-interface = "=0.4.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "=1.16.25"